# lxe_sphere

./: flake.nix  justfile
flake/: outputs.nix
macs/: vis.mac
src/: CMakeLists.txt  generator.cc  generator.hh  geometry.cc  geometry.hh  lxe_sphere.cc
